force-app/main/default/objects/ISC_Catalog_Item__c/ISC_Catalog_Item__c.object-meta.xml
<CustomObject>
    <label>ISC Catalog Item</label>
    <nameField>
        <displayFormat>CLG-{000000}</displayFormat>
        <label>Service Catalog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISC Catalog Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>