force-app/main/default/objects/ISC_Catalog_Item__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>Icon to display to the user.  If no icon is chosen, the default icon configured on the builder is displayed</description>
    <inlineHelpText>https://www.lightningdesignsystem.com/icons/</inlineHelpText>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>