force-app/main/default/objects/ISC_Catalog_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Subtitle__c</columns>
    <columns>Flow_API_Name__c</columns>
    <columns>Icon__c</columns>
    <columns>Order__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>