force-app/main/default/objects/ISC_Catalog_Item__c/listViews/HR_Services_India_Payroll_ISC_Catalog_Item.listView-meta.xml
<ListView>
    <fullName>HR_Services_India_Payroll_ISC_Catalog_Item</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Services - India - Payroll</label>
    <queue>HR_Services_India_Payroll</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>